--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Streamlit CI Pipeline
 
 on:
   push:
@@ -8,69 +8,41 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-
 jobs:
-  build_and_test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: nashitakalila
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
-      - name: Build and run containers
-        run: |
-          docker-compose up -d --build
-
-      - name: Wait for the server to be ready
-        run: |
-          until curl -s http://127.0.0.1:5000 > /dev/null; do
-            echo "Waiting for the server to be ready..."
-            sleep 5
-          done
-          echo "Server is up and running!"
-
-      - name: Run tests
-        run: |
-          curl http://127.0.0.1:5000
-
-      - name: Tear down
-        run: docker-compose down
-
-  deploy_streamlit:
-    runs-on: ubuntu-latest
-    needs: build_and_test
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.11"
+          python-version: '3.8'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt  # Gantikan dengan nama file requirements Anda
 
-      - name: Deploy Streamlit app
-        uses: streamlit/streamlit-app-action@v0.0.3
-        with:
-          app-path: app.py
+      - name: Run Streamlit app
+        run: |
+          streamlit run app.py &> streamlit.log &
+          echo "Streamlit app is starting..."
+
+      - name: Wait for Streamlit to be ready
+        run: |
+          until curl -s http://localhost:5000 > /dev/null; do
+            echo "Waiting for Streamlit app to be ready..."
+            sleep 5
+          done
+          echo "Streamlit app is up and running!"
+
+      - name: Run tests
+        run: |
+          curl http://localhost:5000  # Gantikan dengan uji tes yang sesuai untuk aplikasi Streamlit Anda
+
+      - name: Tear down
+        run: |
+          kill $(pidof streamlit)
